fix: validator fix
